// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApplicationForm /> redenrs as expected with error 1`] = `
<form
  className="iap-apps-form"
  onSubmit={[Function]}
>
  <FormErrorMessage
    error={[Error: error]}
  />
  <Field
    label="Name"
  >
    <Input
      Icon={null}
      autoComplete="off"
      disabled={false}
      errorMessage=""
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter name"
      type="text"
      value=""
    />
  </Field>
  <Field
    label="Type"
  >
    <Select
      disabled={false}
      errorMessage=""
      name="type"
      onChange={[Function]}
      placeholder="Select Application Type"
      value=""
    >
      <SelectOption
        active={false}
        onClick={[Function]}
        title="Single Page Application (Web)"
        value="web"
      />
      <SelectOption
        active={false}
        onClick={[Function]}
        title="Android Client (Mobile)"
        value="android"
      />
      <SelectOption
        active={false}
        onClick={[Function]}
        title="iOS Client (Mobile)"
        value="ios"
      />
    </Select>
  </Field>
  <footer
    className="iap-apps-form__footer"
  >
    <Button
      Icon={[Function]}
      disabled={false}
      error={true}
      iconClassName=""
      onClick={null}
      stretch={false}
      transparent={false}
      type="submit"
    >
      Save changes
    </Button>
    <Button
      Icon={null}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={[MockFunction]}
      stretch={false}
      transparent={true}
      type="button"
    >
      Cancel
    </Button>
  </footer>
</form>
`;

exports[`<ApplicationForm /> renders as expected 1`] = `
<form
  className="iap-apps-form"
  onSubmit={[Function]}
>
  <Field
    label="Name"
  >
    <Input
      Icon={null}
      autoComplete="off"
      disabled={false}
      errorMessage=""
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter name"
      type="text"
      value=""
    />
  </Field>
  <Field
    label="Type"
  >
    <Select
      disabled={false}
      errorMessage=""
      name="type"
      onChange={[Function]}
      placeholder="Select Application Type"
      value=""
    >
      <SelectOption
        active={false}
        onClick={[Function]}
        title="Single Page Application (Web)"
        value="web"
      />
      <SelectOption
        active={false}
        onClick={[Function]}
        title="Android Client (Mobile)"
        value="android"
      />
      <SelectOption
        active={false}
        onClick={[Function]}
        title="iOS Client (Mobile)"
        value="ios"
      />
    </Select>
  </Field>
  <footer
    className="iap-apps-form__footer"
  >
    <Button
      Icon={[Function]}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={null}
      stretch={false}
      transparent={false}
      type="submit"
    >
      Save changes
    </Button>
    <Button
      Icon={null}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={[MockFunction]}
      stretch={false}
      transparent={true}
      type="button"
    >
      Cancel
    </Button>
  </footer>
</form>
`;

exports[`<ApplicationForm /> renders as expected when loading 1`] = `
<form
  className="iap-apps-form"
  onSubmit={[Function]}
>
  <Field
    label="Name"
  >
    <Input
      Icon={null}
      autoComplete="off"
      disabled={true}
      errorMessage=""
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter name"
      type="text"
      value=""
    />
  </Field>
  <Field
    label="Type"
  >
    <Select
      disabled={true}
      errorMessage=""
      name="type"
      onChange={[Function]}
      placeholder="Select Application Type"
      value=""
    >
      <SelectOption
        active={false}
        onClick={[Function]}
        title="Single Page Application (Web)"
        value="web"
      />
      <SelectOption
        active={false}
        onClick={[Function]}
        title="Android Client (Mobile)"
        value="android"
      />
      <SelectOption
        active={false}
        onClick={[Function]}
        title="iOS Client (Mobile)"
        value="ios"
      />
    </Select>
  </Field>
  <footer
    className="iap-apps-form__footer"
  >
    <Button
      Icon={[Function]}
      disabled={true}
      error={false}
      iconClassName=""
      onClick={null}
      stretch={false}
      transparent={false}
      type="submit"
    >
      Save changes
    </Button>
    <Button
      Icon={null}
      disabled={true}
      error={false}
      iconClassName=""
      onClick={[MockFunction]}
      stretch={false}
      transparent={true}
      type="button"
    >
      Cancel
    </Button>
  </footer>
</form>
`;
